sort.basic.gnome.AlgGnomeSort.scala.error
Compilation error:
AlgGnomeSort:5: error: not found: value getValeurs
  if (getValeurs(i)<getValeurs(i+1)){
      ^AlgGnomeSort:5: error: not found: value getValeurs
  if (getValeurs(i)<getValeurs(i+1)){
                    ^AlgGnomeSort:7: error: not found: value getValeurs
  } else if (getValeurs(i)>getValeurs(i+1)){
             ^AlgGnomeSort:7: error: not found: value getValeurs
  } else if (getValeurs(i)>getValeurs(i+1)){
                           ^