sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
  var i:Int = 0
  while (i<getNombreValeurs){
  if (getValeurs(i)<getValeurs(i+1)){
    i = i+1
  } else if (getValeurs(i)>getValeurs(i+1)){
    echange(i,i+1)
    if (i==0){
      i = 1
    } else{
      i = i-1
    }
  }
  }

}